serde_someip/derive_tests/failures/union.stderr
error: Unions are not supported by someip
 --> derive_tests/failures/union.rs:4:1
  |
4 | union Test {
  | ^^^^^
